feat: remove token, support only ssh authentication

--- a/installer/sample.env
+++ b/installer/sample.env
@@ -8,11 +8,10 @@ DB_HOST= #"localhost"
 DB_ROOT_USERNAME= #"root"
 DB_ROOT_PASSWORD= #"1234"
 
-REPO_MODE= #[ssh, token]
+REPO_MODE="ssh" #[ssh]
 REPO_URI= #"your.server.domain"
 REPO_PORT= #"22"
 REPO_SSH_KEY= #"$HOME/path/to/private.key"
-REPO_TOKEN= #"username@token"
 
 BENCH_VERSION= #"5.22"
 FRAPPE_VERSION= #"version-15"
